--- a/CA_Portal/home/static/home/style.css
+++ b/CA_Portal/home/static/home/style.css
@@ -1,101 +1,96 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
 }
 
 .header {
-  background: linear-gradient(
-      0deg,
-      rgba(0, 17, 38, 0.22),
-      rgba(0, 17, 38, 0.22)
-    ),
-    url(/static/home/img/bg.png);
-  min-height: 100vh;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  position: relative;
+    background: linear-gradient( 0deg, rgba(0, 17, 38, 0.22), rgba(0, 17, 38, 0.22)), url(/static/home/img/bg.png);
+    min-height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
 
 nav {
-  display: flex;
-  padding: 2% 6%;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav img {
-  width: 209px;
+    width: 209px;
 }
 
 .nav-links {
-  flex: 1;
-  text-align: right;
+    flex: 1;
+    text-align: right;
 }
 
 .nav-links ul li {
-  list-style: none;
-  display: inline-block;
-  padding: 8px 28px;
-  position: relative;
+    list-style: none;
+    display: inline-block;
+    padding: 8px 28px;
+    position: relative;
 }
 
 .nav-links ul li a {
-  color: #ffffff;
-  text-decoration: none;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 .nav-links ul li a:hover {
-  color: #109cf1;
-  transition: 0.5s;
+    color: #109cf1;
+    transition: 0.5s;
 }
 
 #join-button {
-  border: 1px solid #109cf1;
-  box-sizing: border-box;
-  border-radius: 4px;
-  background-color: #ffffff;
+    border: 1px solid #109cf1;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #ffffff;
 }
 
 #join-button a {
-  font-weight: 600;
-  color: #109cf1;
+    font-weight: 600;
+    color: #109cf1;
 }
 
 #join-button a:hover {
-  color: #334d6e;
-  transition: 0.5s;
+    color: #334d6e;
+    transition: 0.5s;
 }
 
 .text-box {
-  width: 90%;
-  left: 55%;
-  top: 50%;
-  color: #ffffff;
-  position: absolute;
-  transform: translate(-50%, -50%);
+    width: 90%;
+    left: 55%;
+    top: 50%;
+    color: #ffffff;
+    position: absolute;
+    transform: translate(-50%, -50%);
 }
 
-.text-box h2{
+.text-box h2 {
     font-weight: normal;
     font-size: 40px;
     padding-bottom: 10px;
 }
 
-.text-box h1{
+.text-box h1 {
     font-weight: 600;
     font-size: 60px;
     padding-bottom: 10px;
 }
 
-.text-box p{
+.text-box p {
     width: 38%;
     font-weight: 400;
     padding-bottom: 20px;
 }
 
-.hero-btn{
+.hero-btn {
     border: 1px solid #109cf1;
     display: inline-block;
     text-decoration: none;
@@ -113,4 +108,69 @@ nav img {
     transition: 0.5s;
 }
 
+.video {
+    align-items: center;
+    width: 1246px;
+    height: 702px;
+}
 
+.joining {
+    text-align: center;
+    color: #109cf1;
+    font-size: 22px;
+    margin: 20px 0px 100px 0px;
+}
+
+.join img:nth-child(1) {
+    width: 240px;
+    height: 240px;
+    margin-left: 200px;
+}
+
+.join img:nth-child(2) {
+    width: 240px;
+    height: 240px;
+    margin-left: 200px;
+}
+
+.join img:nth-child(3) {
+    width: 240px;
+    height: 240px;
+    margin-left: 200px;
+}
+
+#blue {
+    background-color: #109cf1;
+    margin: 60px 0px 60px 0px;
+}
+
+#res {
+    width: 714px;
+    height: 63px;
+    color: white;
+    text-align: center;
+    align-items: center;
+    margin-left: 400px;
+    margin-top: 100px;
+    padding: 100px 0px 0px 0px;
+    font-size: 24px;
+}
+
+#man img:nth-child(1) {
+    width: 450px;
+    height: 360px;
+    margin-top: 40px;
+    margin-left: 120px;
+    margin-bottom: 40px;
+}
+
+.market img:nth-child(1) {
+    margin-left: 200px;
+}
+
+.market img {
+    display: inline;
+    width: 200px;
+    height: 200px;
+    margin: 40px 100px 40px auto;
+}
