--- a/CA_Portal/home/templates/home/index.html
+++ b/CA_Portal/home/templates/home/index.html
@@ -1,42 +1,90 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'home/style.css' %}" type="text/css" />
     <title>Alcheringa CA Portal</title>
-  </head>
-  <body>
-    <section class="header">
-      <nav>
-        <a href="#"><img src="{% static 'home/img/logo.png' %}" alt="Logo" /></a>
-        <div class="nav-links">
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Benefits</a></li>
-            <li><a href="#">Responsibilities</a></li>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">Login</a></li>
-            <li id="join-button"><a href="#">Join Now</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="text-box">
-          <h2>Alcheringa 2022</h2>
-          <h1>Campus Ambassador</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu orci, scelerisque consequat aenean massa lobortis pretium.</p>
-          <a href="#" class="hero-btn">Join Now</a>
+</head>
 
-      </div>
+<body>
+    <section class="header">
+        <nav>
+            <a href="#"><img src="{% static 'home/img/logo.png' %}" alt="Logo" /></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Benefits</a></li>
+                    <li><a href="#">Responsibilities</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li id="join-button"><a href="#">Join Now</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="text-box">
+            <h2>Alcheringa 2022</h2>
+            <h1>Campus Ambassador</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu orci, scelerisque consequat aenean massa lobortis pretium.</p>
+            <a href="#" class="hero-btn">Join Now</a>
+
+        </div>
     </section>
-    
-  </body>
+
+    <section class="video">
+        <iframe src="https://www.youtube.com/watch?v=xSDlUEJ22vU"></iframe>
+    </section>
+
+    <section>
+        <div>
+            <p class="joining">
+                Why should you join?
+            </p>
+        </div>
+        <div class="join">
+            <img src="{% static 'home/img/perspaleta1_0016.png' %}">
+            <img src="{% static 'home\img\perspaleta1.png' %}">
+            <img src="{% static 'home\img\perspaleta1_0003.png' %}">
+        </div>
+    </section>
+
+    <section>
+        <div id="blue">
+            <p id="res">
+                What will be your responsibilities?
+            </p>
+            <div id="man">
+                <img src="{% static 'home\img\marketing-campaign-3025712-2526910.png' %}" alt="Man">
+            </div>
+            <div class="market">
+                <img src="{% static 'home\img\perspaleta1_0008.png' %}">
+                <img src="{% static 'home\img\perspaleta1_0031.png' %}">
+                <img src="{% static 'home\img\perspaleta1_0015.png' %}">
+                <img src="{% static 'home\img\perspaleta1_0037.png' %}">
+
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <p class="joining">
+                Past Offers
+            </p>
+        </div>
+        <div class="join">
+            <img src="{% static 'home/img/perspaleta1_0016.png' %}">
+            <img src="{% static 'home\img\perspaleta1.png' %}">
+            <img src="{% static 'home\img\perspaleta1_0003.png' %}">
+        </div>
+    </section>
+
+</body>
+
 </html>
