Frontend Changes ADJ

--- a/CA_Portal/home/templates/home/index.html
+++ b/CA_Portal/home/templates/home/index.html
@@ -1,90 +1,186 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'home/style.css' %}" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="{% static 'home/style.css' %}"
+      type="text/css"
+    />
     <title>Alcheringa CA Portal</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="header">
-        <nav>
-            <a href="#"><img src="{% static 'home/img/logo.png' %}" alt="Logo" /></a>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Benefits</a></li>
-                    <li><a href="#">Responsibilities</a></li>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li id="join-button"><a href="#">Join Now</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="text-box">
-            <h2>Alcheringa 2022</h2>
-            <h1>Campus Ambassador</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu orci, scelerisque consequat aenean massa lobortis pretium.</p>
-            <a href="#" class="hero-btn">Join Now</a>
-
+      <nav>
+        <a href="#"
+          ><img src="{% static 'home/img/logo.png' %}" alt="Logo"
+        /></a>
+        <div class="nav-links">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Benefits</a></li>
+            <li><a href="#">Responsibilities</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Login</a></li>
+            <li id="join-button"><a href="#">Join Now</a></li>
+          </ul>
         </div>
-    </section>
-
-    <section class="video">
-        <iframe src="https://www.youtube.com/watch?v=xSDlUEJ22vU"></iframe>
+      </nav>
+      <div class="text-box">
+        <h2>Alcheringa 2022</h2>
+        <h1>Campus Ambassador</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu
+          orci, scelerisque consequat aenean massa lobortis pretium.
+        </p>
+        <a href="#" class="hero-btn">Join Now</a>
+      </div>
     </section>
 
     <section>
+      <div class="iframe-container">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/xSDlUEJ22vU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+
+      <div class="video-text"><p>Aftermovie, Alcheringa 2020</p></div>
+    </section>
+
+    <section>
+      <div>
+        <p class="joining">Why should you join?</p>
+      </div>
+      <div class="join">
         <div>
-            <p class="joining">
-                Why should you join?
-            </p>
+          <img src="{% static 'home/img/perspaleta1_0016.png' %}" />
+          <h2>Level-wise Certification</h2>
+          <p>Platinum Certificate (Top 5 CAs)</p>
+        </div>
+        <div>
+          <img src="{% static 'home\img\perspaleta1.png' %}" />
+          <h2>Level-wise Certification</h2>
+          <p>Feel the pride and honor of being<br />the leader of champions</p>
+        </div>
+        <div>
+          <img src="{% static 'home\img\perspaleta1_0003.png' %}" />
+          <h2>Level-wise Certification</h2>
+          <p>
+            Prizes worth 2.2 lakhs to be won<br />Certified Internships and
+            Workshops.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div id="blue">
+        <p id="res">What will be your responsibilities?</p>
+        <div id="man">
+          <img
+            src="{% static 'home\img\marketing-campaign-3025712-2526910.png' %}"
+            alt="Man"
+          />
+          <div class="box-text">
+            <div>
+              <h2>College Branding</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              </p>
+            </div>
+            <div>
+              <h2>City Eliminations</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              </p>
+            </div>
+            <div>
+              <h2>Increasing Reach</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              </p>
+            </div>
+          </div>
         </div>
         <div class="join">
-            <img src="{% static 'home/img/perspaleta1_0016.png' %}">
-            <img src="{% static 'home\img\perspaleta1.png' %}">
-            <img src="{% static 'home\img\perspaleta1_0003.png' %}">
-        </div>
-    </section>
-
-    <section>
-        <div id="blue">
-            <p id="res">
-                What will be your responsibilities?
+          <div>
+            <img src="{% static 'home\img\perspaleta1_0008.png' %}" />
+            <h2 style="color: #FFFFFF;">Complete Tasks</h2>
+            <p style="color: #FFFFFF;">Platinum Certificate (Top 5 CAs)</p>
+          </div>
+          <div>
+            <img src="{% static 'home\img\perspaleta1_0031.png' %}" />
+            <h2 style="color: #FFFFFF;">Share Posts</h2>
+            <p style="color: #FFFFFF;">
+              Feel the pride and honor of being<br />the leader of champions
             </p>
-            <div id="man">
-                <img src="{% static 'home\img\marketing-campaign-3025712-2526910.png' %}" alt="Man">
-            </div>
-            <div class="market">
-                <img src="{% static 'home\img\perspaleta1_0008.png' %}">
-                <img src="{% static 'home\img\perspaleta1_0031.png' %}">
-                <img src="{% static 'home\img\perspaleta1_0015.png' %}">
-                <img src="{% static 'home\img\perspaleta1_0037.png' %}">
-
-            </div>
+          </div>
+          <div>
+            <img src="{% static 'home\img\perspaleta1_0015.png' %}" />
+            <h2 style="color: #FFFFFF;">Get Registrations</h2>
+            <p style="color: #FFFFFF;">
+              Prizes worth 2.2 lakhs to be won<br />Certified Internships and
+              Workshops.
+            </p>
+          </div>
+          <div>
+            <img src="{% static 'home\img\perspaleta1_0037.png' %}" />
+            <h2 style="color: #FFFFFF;">Suggest Ideas</h2>
+            <p style="color: #FFFFFF;">
+              Prizes worth 2.2 lakhs to be won<br />Certified Internships and
+              Workshops.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
 
     <section>
+      <div>
+        <p class="joining">Past offers</p>
+      </div>
+      <div class="join">
         <div>
-            <p class="joining">
-                Past Offers
-            </p>
+          <img src="{% static 'home/img/perspaleta1_0016.png' %}" />
+          <h2>Level-wise Certification</h2>
+          <p>Platinum Certificate (Top 5 CAs)</p>
         </div>
-        <div class="join">
-            <img src="{% static 'home/img/perspaleta1_0016.png' %}">
-            <img src="{% static 'home\img\perspaleta1.png' %}">
-            <img src="{% static 'home\img\perspaleta1_0003.png' %}">
+        <div>
+          <img src="{% static 'home\img\perspaleta1.png' %}" />
+          <h2>Level-wise Certification</h2>
+          <p>Feel the pride and honor of being<br />the leader of champions</p>
         </div>
+        <div>
+          <img src="{% static 'home\img\perspaleta1_0003.png' %}" />
+          <h2>Level-wise Certification</h2>
+          <p>
+            Prizes worth 2.2 lakhs to be won<br />Certified Internships and
+            Workshops.
+          </p>
+        </div>
+      </div>
     </section>
-
-</body>
-
+  </body>
 </html>
