--- a/CA_Portal/home/static/home/style.css
+++ b/CA_Portal/home/static/home/style.css
@@ -1,176 +1,218 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .header {
-    background: linear-gradient( 0deg, rgba(0, 17, 38, 0.22), rgba(0, 17, 38, 0.22)), url(/static/home/img/bg.png);
-    min-height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    position: relative;
+  background: linear-gradient(
+      0deg,
+      rgba(0, 17, 38, 0.22),
+      rgba(0, 17, 38, 0.22)
+    ),
+    url(/static/home/img/bg.png);
+  min-height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 
 nav {
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav img {
-    width: 209px;
+  width: 209px;
 }
 
 .nav-links {
-    flex: 1;
-    text-align: right;
+  flex: 1;
+  text-align: right;
 }
 
 .nav-links ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 8px 28px;
-    position: relative;
+  list-style: none;
+  display: inline-block;
+  padding: 8px 28px;
+  position: relative;
 }
 
 .nav-links ul li a {
-    color: #ffffff;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .nav-links ul li a:hover {
-    color: #109cf1;
-    transition: 0.5s;
+  color: #109cf1;
+  transition: 0.5s;
 }
 
 #join-button {
-    border: 1px solid #109cf1;
-    box-sizing: border-box;
-    border-radius: 4px;
-    background-color: #ffffff;
+  border: 1px solid #109cf1;
+  box-sizing: border-box;
+  border-radius: 4px;
+  background-color: #ffffff;
 }
 
 #join-button a {
-    font-weight: 600;
-    color: #109cf1;
+  font-weight: 600;
+  color: #109cf1;
 }
 
 #join-button a:hover {
-    color: #334d6e;
-    transition: 0.5s;
+  color: #334d6e;
+  transition: 0.5s;
 }
 
 .text-box {
-    width: 90%;
-    left: 55%;
-    top: 50%;
-    color: #ffffff;
-    position: absolute;
-    transform: translate(-50%, -50%);
+  width: 90%;
+  left: 55%;
+  top: 50%;
+  color: #ffffff;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 
 .text-box h2 {
-    font-weight: normal;
-    font-size: 40px;
-    padding-bottom: 10px;
+  font-weight: normal;
+  font-size: 40px;
+  padding-bottom: 10px;
 }
 
 .text-box h1 {
-    font-weight: 600;
-    font-size: 60px;
-    padding-bottom: 10px;
+  font-weight: 600;
+  font-size: 60px;
+  padding-bottom: 10px;
 }
 
 .text-box p {
-    width: 38%;
-    font-weight: 400;
-    padding-bottom: 20px;
+  width: 38%;
+  font-weight: 400;
+  padding-bottom: 20px;
 }
 
 .hero-btn {
-    border: 1px solid #109cf1;
-    display: inline-block;
-    text-decoration: none;
-    padding: 8px 28px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    background-color: #109cf1;
-    color: #ffffff;
-    position: relative;
-    cursor: pointer;
+  border: 1px solid #109cf1;
+  display: inline-block;
+  text-decoration: none;
+  padding: 8px 28px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  background-color: #109cf1;
+  color: #ffffff;
+  position: relative;
+  cursor: pointer;
 }
 
 .hero-btn:hover {
-    color: #334d6e;
-    transition: 0.5s;
+  color: #334d6e;
+  transition: 0.5s;
 }
 
-.video {
-    align-items: center;
-    width: 1246px;
-    height: 702px;
+.iframe-container {
+  position: relative;
+  margin-top: 5%;
+  margin-left: 17%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 80%;
+}
+
+.video-text p {
+  margin-top: -10%;
+  text-align: center;
 }
 
 .joining {
-    text-align: center;
-    color: #109cf1;
-    font-size: 22px;
-    margin: 20px 0px 100px 0px;
+  text-align: center;
+  color: #109cf1;
+  font-size: 22px;
+  margin-top: 100px;
+  margin-bottom: 60px;
+  font-weight: 500;
 }
 
-.join img:nth-child(1) {
-    width: 240px;
-    height: 240px;
-    margin-left: 200px;
+.join {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 5%;
 }
 
-.join img:nth-child(2) {
-    width: 240px;
-    height: 240px;
-    margin-left: 200px;
+.join div{
+    justify-content: space-around;
+  align-items: center;
 }
 
-.join img:nth-child(3) {
-    width: 240px;
-    height: 240px;
-    margin-left: 200px;
+.join div img {
+  
+  text-align: center ;
 }
+
+.join div h2 {
+    text-align: center ;
+    color: #334D6E;
+    font-weight: 500;
+  }
+
+.join div p {
+    text-align: center ;
+    color: #707683;
+    font-weight: 400;
+  }
 
 #blue {
-    background-color: #109cf1;
-    margin: 60px 0px 60px 0px;
+  background-color: #109cf1;
+  margin: 60px 0px 60px 0px;
 }
 
 #res {
-    width: 714px;
-    height: 63px;
-    color: white;
-    text-align: center;
-    align-items: center;
-    margin-left: 400px;
-    margin-top: 100px;
-    padding: 100px 0px 0px 0px;
-    font-size: 24px;
+ 
+  color: white;
+  text-align: center;
+  padding: 100px 0px 0px 0px;
+  font-size: 32px;
 }
 
-#man img:nth-child(1) {
-    width: 450px;
-    height: 360px;
-    margin-top: 40px;
-    margin-left: 120px;
-    margin-bottom: 40px;
+#man{
+    display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.market img:nth-child(1) {
-    margin-left: 200px;
+#man img{
+  width: 30%;
+  height: 30%;
+  margin-top: 7%;
+  margin-left: 9%;
+  margin-bottom: 9%;
 }
 
-.market img {
-    display: inline;
-    width: 200px;
-    height: 200px;
-    margin: 40px 100px 40px auto;
+.box-text{
+    background-color: #F3F6F8;
+    padding: 4% 4%;
+    border-radius: 4px;
+    margin: 7%;
 }
+
+.box-text div h2{
+    margin-bottom: 2%;
+}
+
+.box-text div p{
+    margin-bottom: 4%;
+}
+
