--- a/CA_Portal/home/static/home/style.css
+++ b/CA_Portal/home/static/home/style.css
@@ -19,17 +19,20 @@
 }
 
 nav {
+  position: fixed;
   display: flex;
+  opacity: 100%;
   padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
   width: 90%;
-  transition: background .5s;
+  transition: background 0.5s;
+  z-index: 5;
 }
 
 nav.scrolled {
-    background: #ffffff;
-    z-index: 5;
+  background: #ffffff;
+  z-index: 5;
 }
 
 nav img {
@@ -53,11 +56,20 @@ nav img {
   text-decoration: none;
 }
 
-#navlink1.scroll, #navlink2.scroll, #navlink3.scroll, #navlink4.scroll, #navlink5.scroll {
-  color: #334D6E;
+#navlink1.scroll,
+#navlink2.scroll,
+#navlink3.scroll,
+#navlink4.scroll,
+#navlink5.scroll {
+  color: #334d6e;
 }
 
-.nav-links ul li a:hover, #navlink1.scroll:hover, #navlink2.scroll:hover, #navlink3.scroll:hover, #navlink4.scroll:hover, #navlink5.scroll:hover {
+.nav-links ul li a:hover,
+#navlink1.scroll:hover,
+#navlink2.scroll:hover,
+#navlink3.scroll:hover,
+#navlink4.scroll:hover,
+#navlink5.scroll:hover {
   color: #109cf1;
   transition: 0.5s;
 }
@@ -70,19 +82,19 @@ nav img {
 }
 
 #join-button.scroll {
-    border: 1px solid #ffffff;
-    box-sizing: border-box;
-    border-radius: 4px;
-    background-color: #109cf1;
-  }
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 4px;
+  background-color: #109cf1;
+}
 
 #join-button a {
   font-weight: 600;
   color: #109cf1;
 }
 
-#join-button-text.scroll{
-    color: #ffffff;
+#join-button-text.scroll {
+  color: #ffffff;
 }
 
 #join-button a:hover {
@@ -230,10 +242,12 @@ nav img {
 
 .box-text div h2 {
   margin-bottom: 2%;
+  color: #334D6E;
 }
 
 .box-text div p {
   margin-bottom: 4%;
+  color: #707683;
 }
 
 nav .fa {
@@ -269,10 +283,10 @@ nav .fa {
 
   nav .fa {
     display: block;
-    color: #ffffff;
     margin: 10px;
     font-size: 22px;
     cursor: pointer;
+    color: #334D6E;
   }
 
   .nav-links ul {
@@ -292,7 +306,7 @@ nav .fa {
   .join div img {
     width: 60%;
     height: 60%;
-    margin-left: 20% ;
+    margin-left: 20%;
   }
 
   .text-box h2 {
